# torch_dl

./: .gitignore  README.md  alex_net.py  pyproject.toml
UniversialProximlaThm/: UPT.ipynb
activison_function/: experiment_cnn.py  experiment_fcnn.py  quadratic_swish.ipynb
base_model/: fully_connected_nn.py
deep_learning/: fc_network.py  how__nn_works.ipynb
docs/: CUDA_SETUP.md
language/hanzi2image2vec/: chinese_cae_128.pth  enco_deco.py  hanzi2image.py  image2vec.py
notebooks/: 1_1_BackgroundMathematics.ipynb  2_1_Supervised_Learning.ipynb  3_1_Shallow_Networks_I.ipynb  3_2_Shallow_Networks_II.ipynb  3_3_Shallow_Network_Regions.ipynb  3_4_Activation_Functions.ipynb  4_1_Composing_Networks.ipynb  4_2_Clipping_functions.ipynb  4_3_Deep_Networks.ipynb  5_1_Least_Squares_Loss.ipynb  5_2_Binary_Cross_Entropy_Loss.ipynb  5_3_Multiclass_Cross_entropy_Loss.ipynb  6_1_Line_Search.ipynb  6_2_Gradient_Descent.ipynb  6_3_Stochastic_Gradient_Descent (1).ipynb  6_4_Momentum.ipynb  6_5_Adam.ipynb  7_1_Backpropagation_in_Toy_Model.ipynb  7_2_Backpropagation.ipynb  7_3_Initialization.ipynb  8_1_MNIST_1D_Performance.ipynb  8_2_Bias_Variance_Trade_Off.ipynb  8_3_Double_Descent.ipynb  8_4_High_Dimensional_Spaces.ipynb  completed_4_3_Deep_Networks.ipynb  completed_5_1_Least_Squares_Loss.ipynb  completed_5_2_Binary_Cross_Entropy_Loss.ipynb  completed_6_1_Line_Search.ipynb  completed_6_2_Gradient_Descent.ipynb  completed_7_1_Backpropagation_in_Toy_Model.ipynb  completed_7_2_Backpropagation.ipynb  completed_7_3_Initialization.ipynb  completed_8_4_High_Dimensional_Spaces.ipynb  loss_surface.ipynb  tutorial CNN.ipynb  tutorial RNN.ipynb  tutorial diffusion.ipynb  tutorial pruning 1.ipynb  tutorial pruning 2.ipynb  tutorial quantization.ipynb
utils/: test_cuda.py
vision/: convolution_filters.py  depth_separable_conv.ipynb  efficient_net.ipynb  fcnn.ipynb  fully_connected_nn.py  resize.py  style_transfer.py  transformer.py  vision_network.py  visualize_mnist.ipynb
vision/.ipynb_checkpoints/: depth_separable_conv-checkpoint.ipynb
vision/style_transfer/: resize.py  style_transfer.py
