[project]
name = "torch-dl"
version = "0.1.0"
description = "Deep learning project with PyTorch and CUDA support"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.5",
    "notebook>=7.4.7",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'windows'"},
    { index = "pytorch-cpu", marker = "sys_platform != 'windows'"},
]

torchvision = [
    { index = "pytorch-cu130", marker = "sys_platform == 'windows'"},
    { index = "pytorch-cpu", marker = "sys_platform != 'windows'"},
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[project.optional-dependencies]
cuda = [
    "torch>=2.9.0; sys_platform == 'windows'",
    "torch>=2.9.0; sys_platform != 'windows'",
    "torchvision>=0.24.0; sys_platform == 'windows'",
    "torchvision>=0.24.0; sys_platform != 'windows'",
]

[dependency-groups]
dev = [
    "ruff>=0.13",
]
